# vacancy-parsing

./: .env_example  README.md  config.py  main.py  pyproject.toml
data/: test_hh_vacancy.json  test_json_vacancy.json  test_sj_vacancy.json  test_vacancy.json  vacancy.json
src/: class_api.py  engine.py  hh.py  jobs.py  superjob.py  utils.py
tests/: test_engine.py  test_jobs.py  test_utils.py
